--- a/client/package.json
+++ b/client/package.json
@@ -6,20 +6,21 @@
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
-    "axios": "^1.2.2",
-    "bootstrap": "^5.2.3",
+    "@uiw/react-codemirror": "^4.19.9",
+    "axios": "^1.3.3",
     "ethers": "^5.7.2",
     "localforage": "^1.10.0",
     "match-sorter": "^6.3.1",
     "react": "^18.2.0",
-    "react-bootstrap": "^2.7.0",
+    "react-circular-progressbar": "^2.1.0",
     "react-dom": "^18.2.0",
+    "react-icons": "^4.7.1",
     "react-router-dom": "^6.6.2",
     "react-scripts": "5.0.1",
-    "react-select": "^5.7.0",
     "sort-by": "^1.2.0",
+    "tailwind-scrollbar-hide": "^1.1.7",
     "web-vitals": "^2.1.4",
-    "web3": "^1.8.1"
+    "web3": "^1.8.2"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -46,6 +47,7 @@
     ]
   },
   "devDependencies": {
-    "@types/jquery": "^3.5.16"
+    "tailwind-scrollbar": "^2.1.0",
+    "tailwindcss": "^3.2.6"
   }
 }
